# build_bazel

./: .gitignore  PREUPLOAD.cfg  bazel.BUILD  bazel.WORKSPACE  bazel.sh  buildifier_hook.sh  common.bazelrc  constants_exported_to_soong.bzl  darwin.bazelrc  lib.sh  linux.bazelrc
examples/rust/: BUILD.bazel
product_config/soong_config_variables/: BUILD.bazel
rules/: BUILD.bazel  README.md  android_app_certificate.bzl  apex.bzl  apex_key.bzl  apex_settings.bzl  api_surfaces_injection.bzl  build_fingerprint.bzl  cc_binary.bzl  cc_constants.bzl  cc_include_helpers.bzl  cc_library_common.bzl  cc_library_headers.bzl  cc_library_shared.bzl  cc_library_static.bzl  cc_object.bzl  cc_proto.bzl  cc_stub_library.bzl  common.bzl  env.bzl  env_variables.bzl  filegroup.bzl  full_cc_library.bzl  generate_toc.bzl  gensrcs.bzl  gensrcs_test.bzl  hidl_file_utils.bzl  linker_config.bzl  linker_config_test.bzl  llvm_prebuilt_library_static.bzl  lunch.bzl  make_injection.bzl  metadata.bzl  prebuilt_etc.bzl  prebuilt_file.bzl  prebuilt_file_test.bzl  prebuilt_library_shared.bzl  prebuilt_library_static.bzl  prebuilt_xml.bzl  prebuilt_xml_test.bzl  (+11 more)
rules/abi/: BUILD.bazel  abi_dump.bzl  abi_dump_test.bzl
rules/aconfig/: BUILD  aconfig_declarations.bzl  aconfig_declarations_test.bzl  aconfig_value_set.bzl  aconfig_value_sets.bzl  aconfig_values.bzl
rules/aidl/: BUILD  aidl_interface.bzl  aidl_interface_test.bzl  aidl_library.bzl  aidl_library_test.bzl  interface.bzl  interface_test.bzl  library.bzl  library_test.bzl
rules/android/: BUILD.bazel  aar_import.bzl  android_app_certificate.bzl  android_app_keystore.bzl  android_binary.bzl  android_library.bzl  android_test.bzl  debug_signing_key.bzl  framework_resources.bzl  framework_resources_test.bzl  manifest_fixer.bzl  manifest_fixer_internal.bzl  manifest_fixer_test.bzl  rules.bzl
rules/apex/: BUILD  METADATA  README.md  apex.bzl  apex_aab.bzl  apex_aab_test.bzl  apex_available.bzl  apex_deps_validation.bzl  apex_info.bzl  apex_key.bzl  apex_key_test.bzl  apex_mk_test.bzl  apex_test.bzl  apex_test_helpers.bzl  bazel_apexer_wrapper.py  bazel_apexer_wrapper_test.sh  bundle.bzl  cc.bzl  mainline_modules.bzl  sdk_versions.bzl  toolchain.bzl  transition.bzl
rules/apis/: BUILD  README.md  api_domain.bzl  api_domain_contribution.bzl  api_domain_contribution_test.bzl  api_domain_test.bzl  api_surface.bzl  cc_api_contribution.bzl  cc_api_contribution_test.bzl  java_api_contribution.bzl
rules/bpf/: BUILD  bpf.bzl  bpf_test.bzl
rules/cc/: BUILD.bazel  cc_aconfig_library.bzl  cc_aconfig_library_test.bzl  cc_aidl_code_gen.bzl  cc_aidl_library.bzl  cc_aidl_library_test.bzl  cc_binary.bzl  cc_binary_test.bzl  cc_constants.bzl  cc_hidl_library.bzl  cc_hidl_library_test.bzl  cc_info_subject.bzl  cc_library_common.bzl  cc_library_common_test.bzl  cc_library_headers.bzl  cc_library_headers_test.bzl  cc_library_shared.bzl  cc_library_shared_test.bzl  cc_library_static.bzl  cc_library_static_test.bzl  cc_object.bzl  cc_object_test.bzl  cc_prebuilt_binary.bzl  cc_prebuilt_binary_test.bzl  cc_prebuilt_library_shared.bzl  cc_prebuilt_library_shared_test.bzl  cc_prebuilt_library_static.bzl  cc_prebuilt_library_static_test.bzl  cc_prebuilt_object.bzl  cc_proto.bzl  cc_proto_test.bzl  cc_stub_library.bzl  cc_stub_library_test.bzl  cc_sysprop_library.bzl  cc_sysprop_library_test.bzl  cc_test.bzl  cc_test_test.bzl  cc_xsd_config_library.bzl  cc_xsd_config_library_test.bzl  cc_yacc_library.bzl  (+27 more)
rules/common/: BUILD.bazel  api.bzl  api_constants.bzl  api_internal.bzl  api_internal_test.bzl  api_test.bzl  config.bzl  sdk_version.bzl  sdk_version_test.bzl
rules/droiddoc/: BUILD.bazel  droiddoc_exported_dir.bzl  droiddoc_exported_dir_test.bzl
rules/fdo/: fdo_profile.bzl
rules/hidl/: BUILD  hidl_interface.bzl  hidl_library.bzl  hidl_library_test.bzl  hidl_package_root.bzl
rules/java/: BUILD  aidl_library.bzl  bootclasspath.bzl  bootclasspath_test.bzl  event_log_tags.bzl  host_for_device.bzl  host_for_device_test.bzl  import.bzl  java_aconfig_library.bzl  java_aconfig_library_test.bzl  java_aidl_library.bzl  java_resources.bzl  java_resources_test.bzl  java_sysprop_library.bzl  java_sysprop_library_test.bzl  java_system_modules.bzl  java_system_modules_test.bzl  java_xsd_config_library.bzl  java_xsd_config_library_test.bzl  library.bzl  library_test.bzl  merged_txts.bzl  merged_txts_test.bzl  platform_compat_config.bzl  platform_compat_config_test.bzl  proto.bzl  rules.bzl  sdk_library.bzl  sdk_library_test.bzl  sdk_transition.bzl  sdk_transition_test.bzl  test.bzl  versions.bzl  versions_test.bzl  wrapper_test.sh
rules/kotlin/: BUILD  kotlinc.BUILD  kt_jvm_library.bzl  rules.bzl
rules/license/: BUILD  license.bzl  license_aspect.bzl
rules/partitions/: BUILD  installable_info.bzl  partition.bzl  toolchain.bzl
rules/prebuilts/: BUILD
rules/proto/: WORKSPACE
rules/python/: py_proto.bzl  py_test.bzl
rules/rust/: rust_ffi_static.bzl
rules/sysprop/: BUILD.bazel  sysprop_library.bzl  sysprop_library_test.bzl
rules/test_common/: BUILD.bazel  args.bzl  asserts.bzl  flags.bzl  paths.bzl  rules.bzl
rules/tradefed/: BUILD.bazel  cc_aspects.bzl  tradefed.bzl  tradefed.sh.tpl  tradefed_test.bzl
scripts/: BUILD.bazel  analyze_build  bp2build-sync.py  bp2build-sync.sh  elf_compare.sh  elf_input_files.sh  gen_build_number.sh  mkmodules_diff.sh  print_analysis_metrics.py  run_apex_tests.sh
scripts/bp2build-progress/: BUILD.bazel  README.md  bp2build-module-dep-infos.py  bp2build-progress.py  bp2build_module_dep_infos.py  converted.txt  dependency_analysis.py  dependency_analysis_test.py  soong_module_json.py
scripts/bp2build_progress/: BUILD.bazel  README.md  bp2build_module_dep_infos.py  bp2build_progress.py  bp2build_progress_test.py  dependency_analysis.py  dependency_analysis_test.py  queryview_xml.py  soong_module_json.py
scripts/difftool/: BUILD.bazel  action_diff_notebook.py  clangcompile.py  collect.py  commands.py  difftool.py  difftool_test.py
scripts/incremental_build/: BUILD.bazel  README.md  canonical_perf.sh  clone.py  clone.sh  cuj.py  (+18 more)
(+188 files in other folders)
