load("@bazel_skylib//rules:common_settings.bzl", "bool_flag", "string_flag")
load(
    "@soong_injection//product_config:soong_config_variables.bzl",
    _soong_config_bool_variables = "soong_config_bool_variables",
    _soong_config_string_variables = "soong_config_string_variables",
    _soong_config_value_variables = "soong_config_value_variables",
)

package(default_visibility = ["//visibility:public"])

[
    bool_flag(
        name = name.lower(),
        build_setting_default = False,
    )
    for name in _soong_config_bool_variables
]

[
    string_flag(
        name = name.lower(),
        build_setting_default = "",
    )
    for name in _soong_config_value_variables
]

[
    string_flag(
        name = name.lower(),
        build_setting_default = "",
        values = values + [""],
    )
    for name, values in _soong_config_string_variables.items()
]
