# Copyright (C) 2023 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
load(":android_app_certificate.bzl", "no_android_app_certificate")
load(":manifest_fixer_test.bzl", "manifest_fixer_test_suite")
load(":framework_resources_test.bzl", "framework_resources_test_suite")

no_android_app_certificate(
    name = "no_android_app_certificate",
    visibility = ["//visibility:public"],
)

manifest_fixer_test_suite(
    name = "manifest_fixer_tests",
)

framework_resources_test_suite(
    name = "framework_resources_tests",
)
