"""Copyright (C) 2022 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
"""

load(":cc_aidl_library_test.bzl", "cc_aidl_library_test_suite")
load(":cc_binary_test.bzl", "cc_binary_test_suite")
load(":cc_hidl_library_test.bzl", "cc_hidl_library_test_suite")
load(":cc_library_common_test.bzl", "cc_library_common_test_suites")
load(":cc_sysprop_library_test.bzl", "cc_gen_sysprop_test_suite")
load(":flex_test.bzl", "flex_test_suite")
load(":stl_test.bzl", "stl_test_suite")
load(":yasm_test.bzl", "yasm_test_suite")

cc_aidl_library_test_suite(name = "cc_aidl_library_tests")

cc_binary_test_suite(name = "cc_binary_tests")

cc_hidl_library_test_suite(name = "cc_hidl_library_tests")

cc_library_common_test_suites("cc_library_common_tests")

cc_gen_sysprop_test_suite(name = "cc_gen_sysprop_tests")

flex_test_suite(name = "flex_tests")

stl_test_suite(name = "stl_tests")

yasm_test_suite(name = "yasm_tests")
