"""Copyright (C) 2022 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
"""

load("@bazel_skylib//lib:selects.bzl", "selects")
load("@bazel_skylib//rules:common_settings.bzl", "bool_setting")
load(":cc_aconfig_library_test.bzl", "cc_aconfig_library_test_suite")
load(":cc_aidl_library_test.bzl", "cc_aidl_library_test_suite")
load(":cc_binary_test.bzl", "cc_binary_test_suite")
load(":cc_hidl_library_test.bzl", "cc_hidl_library_test_suite")
load(":cc_library_common_test.bzl", "cc_library_common_test_suites")
load(":cc_library_headers_test.bzl", "cc_library_headers_test_suite")
load(":cc_library_shared_test.bzl", "cc_library_shared_test_suite")
load(":cc_library_static_test.bzl", "cc_library_static_test_suite")
load(":cc_object_test.bzl", "cc_object_test_suite")
load(":cc_prebuilt_binary_test.bzl", "cc_prebuilt_binary_test_suite")
load(":cc_prebuilt_library_shared_test.bzl", "cc_prebuilt_library_shared_test_suite")
load(":cc_prebuilt_library_static_test.bzl", "cc_prebuilt_library_static_test_suite")
load(":cc_proto_test.bzl", "cc_proto_test_suite")
load(":cc_stub_library_test.bzl", "cc_stub_library_test_suite")
load(":cc_sysprop_library_test.bzl", "cc_gen_sysprop_test_suite")
load(":cc_test_test.bzl", "cc_test_test_suite")
load(":cc_xsd_config_library_test.bzl", "cc_xsd_config_library_test_suite")
load(":cc_yacc_library_test.bzl", "cc_yacc_static_library_test_suite")
load(":cfi_transition_test.bzl", "cfi_transition_test_suite")
load(":clang_tidy_test.bzl", "clang_tidy_test_suite")
load(":flex_test.bzl", "flex_test_suite")
load(":lto_transitions_test.bzl", "lto_transition_test_suite")
load(":memtag_heap_transitions_test.bzl", "memtag_heap_transitions_test_suite")
load(":ndk_headers_test.bzl", "ndk_headers_test_suite")
load(":rscript_to_cpp_test.bzl", "rscript_to_cpp_test_suite")
load(":sanitizer_blocklist_test.bzl", "sanitizer_blocklist_test_suite")
load(":stl_test.bzl", "stl_test_suite")
load(":yasm_test.bzl", "yasm_test_suite")

config_setting(
    name = "coverage_lib_flag",
    values = {"collect_code_coverage": "True"},
)

bool_setting(
    name = "cfi_assembly",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

config_setting(
    name = "coverage_cfi_enabled",
    flag_values = {":cfi_assembly": "True"},
)

config_setting(
    name = "coverage_cfi_disabled",
    flag_values = {":cfi_assembly": "False"},
)

# TODO: b/294868620 - This can be removed when completing the bug
bool_setting(
    name = "sanitizers_enabled_setting",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

# TODO: b/294868620 - This can be removed when completing the bug
config_setting(
    name = "sanitizers_enabled",
    flag_values = {":sanitizers_enabled_setting": "True"},
)

selects.config_setting_group(
    name = "android_coverage_lib_flag_cfi",
    match_all = [
        ":coverage_cfi_enabled",
        ":coverage_lib_flag",
        "//build/bazel_common_rules/platforms/os:android_config_setting",
    ],
)

selects.config_setting_group(
    name = "android_coverage_lib_flag",
    match_all = [
        ":coverage_cfi_disabled",
        ":coverage_lib_flag",
        "//build/bazel_common_rules/platforms/os:android_config_setting",
    ],
)

platform(
    name = "windows_for_testing",
    constraint_values = ["@//build/bazel_common_rules/platforms/os:windows"],
)

platform(
    name = "darwin_for_testing",
    constraint_values = ["@//build/bazel_common_rules/platforms/os:darwin"],
)

cc_aconfig_library_test_suite(name = "cc_aconfig_library_tests")

cc_aidl_library_test_suite(name = "cc_aidl_library_tests")

cc_binary_test_suite(name = "cc_binary_tests")

cc_test_test_suite(name = "cc_test_tests")

cc_hidl_library_test_suite(name = "cc_hidl_library_tests")

cc_library_common_test_suites(name = "cc_library_common_tests")

cc_library_headers_test_suite(name = "cc_library_headers_tests")

cc_library_shared_test_suite(name = "cc_library_shared_tests")

cc_library_static_test_suite(name = "cc_library_static_tests")

cc_gen_sysprop_test_suite(name = "cc_gen_sysprop_tests")

cc_object_test_suite(name = "cc_object_tests")

cc_prebuilt_binary_test_suite(name = "cc_prebuilt_binary_tests")

cc_prebuilt_library_shared_test_suite(name = "cc_prebuilt_library_shared_tests")

cc_prebuilt_library_static_test_suite(name = "cc_prebuilt_library_static_tests")

cc_proto_test_suite(name = "cc_proto_tests")

cc_stub_library_test_suite(name = "cc_stub_library_tests")

cc_xsd_config_library_test_suite(name = "cc_xsd_config_library_tests")

cc_yacc_static_library_test_suite(name = "cc_yacc_static_library_tests")

cfi_transition_test_suite(name = "cfi_transition_tests")

clang_tidy_test_suite(name = "clang_tidy_tests")

flex_test_suite(name = "flex_tests")

lto_transition_test_suite(name = "lto_transition_tests")

memtag_heap_transitions_test_suite(name = "memtag_heap_transitions_test")

sanitizer_blocklist_test_suite(name = "sanitizer_blocklist_tests")

stl_test_suite(name = "stl_tests")

yasm_test_suite(name = "yasm_tests")

rscript_to_cpp_test_suite(name = "rscript_to_cpp_tests")

ndk_headers_test_suite(name = "ndk_headers_tests")
