py_binary(
    name = "collect",
    srcs = ["collect.py"],
    python_version = "PY3",
)

py_library(
    name = "difftool_commands",
    srcs = [
        "clangcompile.py",
        "commands.py",
    ],
)

py_binary(
    name = "difftool",
    srcs = ["difftool.py"],
    deps = [":difftool_commands"],
    python_version = "PY3",
)
