# Copyright (C) 2022 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

filegroup(
    name = "collect_zip",
    srcs = [":collect"],
    output_group = "python_zip_file",
)

py_binary(
    name = "collect",
    srcs = ["collect.py"],
    imports = ["."],
    python_version = "PY3",
)

filegroup(
    name = "difftool_zip",
    srcs = [":difftool"],
    output_group = "python_zip_file",
)

py_library(
    name = "difftool_commands",
    srcs = [
        "clangcompile.py",
        "commands.py",
    ],
    deps = [
        "//build/bazel/scripts/difftool/diffs",
    ],
)

py_test(
    name = "difftool_test",
    srcs = ["difftool_test.py"],
    deps = [
        ":collect",
        ":difftool",
    ],
)

py_binary(
    name = "difftool",
    srcs = ["difftool.py"],
    python_version = "PY3",
    deps = [
        ":collect",
        ":difftool_commands",
    ],
)
